src/visitor/snapshots/mst__visitor__dot__tests__linear_children.snap
---
source: src/visitor/dot.rs
expression: v.into_inner().finalise()
---
digraph g {
	page_1:I -> page_2:head;
	page_2 [shape=record, label="<head>Level 1|<E>·|E|<high_page>·"]
	page_2:high_page -> page_3:head [fontcolor=red color=red label="high page"];

	page_3 [shape=record, label="<head>Level 0|<F>·|F"]

	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 2|<I>·|I"]

}

